--- a/GestaoTarefas.Api/appsettings.json
+++ b/GestaoTarefas.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=GestaoTarefasDB;Username=postgres;Password=889521"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
