--- a/GestaoTarefas.Application/GestaoTarefas.Application.csproj
+++ b/GestaoTarefas.Application/GestaoTarefas.Application.csproj
@@ -5,10 +5,16 @@
     <ProjectReference Include="..\GestaoTarefas.Infrastructure\GestaoTarefas.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
   </PropertyGroup>
 
 </Project>
