--- a/GestaoTarefas.Application/GestaoTarefas.Application.csproj
+++ b/GestaoTarefas.Application/GestaoTarefas.Application.csproj
@@ -8,6 +8,10 @@
   <ItemGroup>
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.1" />
+
   </ItemGroup>
 
   <PropertyGroup>
